-
Bug
-
Resolution: Fixed
-
P1: Critical
-
6.8.3
-
None
-
-
e29d00056 (dev), ab39e11d0 (6.9), b06d3d9b9 (6.9.1), 07e829c5c (tqtc/lts-6.8)
Using this simple qml, qmlls will crash
import QtQuick
Rectangle {
MouseArea {
id: handler
anchors.fill: parent
drag.axis: Drag.XAxis
drag.minimumX: 0
}
}
#0 0x00007fb8bcc2996c in QQmlJSScope::hasEnumerationKey(QString const&) const () from tools/Qt6/bin/../../../lib/libQt6QmlCompiler.so.6 #1 0x000055e2bd6c5059 in QQmlLSUtils::resolveIdentifierExpressionType(QQmlJS::Dom::DomItem const&, QQmlLSUtils::ResolveOptions) () #2 0x000055e2bd6baeac in QQmlLSUtils::resolveExpressionType(QQmlJS::Dom::DomItem const&, QQmlLSUtils::ResolveOptions) () #3 0x000055e2bd71855b in HighlightingVisitor::highlightBySemanticAnalysis(QQmlJS::Dom::DomItem const&, QQmlJS::SourceLocation) () #4 0x000055e2bd713ca1 in HighlightingVisitor::operator()(QQmlJS::Dom::Path, QQmlJS::Dom::DomItem const&, bool) () ....
| For Gerrit Dashboard: QTBUG-136552 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 643526,8 | qmlls: fix potential crash | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 645345,2 | qmlls: fix potential crash | 6.9 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 645536,2 | qmlls: fix potential crash | 6.9.1 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
| 645540,2 | qmlls: fix potential crash | tqtc/lts-6.8 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |