qmlls: fix potential crash

Having a valid scope is not guaranteed. Check pointer validity
before dereferencing it.

Fixes: QTBUG-136552
Change-Id: I401a5f96c96b3a7a880145151a1f7cb55b196df0
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit e29d00056064b1ea7a0dbf3c0e792e24632462bd)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit ab39e11d0dc6e99070c1b9ec10af68f7a5f6e186)