tests/auto/qmlls/utils/data/highlights/enums_qtbug.qml
@@ -1,0 +1,9 @@
+import QtQuick
+Rectangle {
+    MouseArea {
+        id: handler
+        anchors.fill: parent
+        drag.axis: Drag.XAxis
+        drag.minimumX: 0
+        }
+}
